[project]
name = "aap-tui"
version = "0.1.0"
description = "Textual TUI for AAP/AWX user operations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
  "textual>=0.56",
  "httpx[http2]>=0.27",
  "pydantic>=2.7",
  "rich>=13.0",
  "pyyaml>=6.0",
  "keyring>=24.0",
  "tomli-w>=1.0; python_version<'3.11'",
  "diskcache>=5.6",
  "orjson>=3.9",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.6",
  "mypy>=1.10",
  "textual-dev>=1.6"
]

[project.scripts]
aap-tui = "aap_tui.cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
